--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,5 @@
-
-.settings/org.eclipse.m2e.core.prefs
-
+.settings
 .classpath
-
 .project
-
-.settings/org.eclipse.core.resources.prefs
-
-.settings/org.eclipse.jdt.core.prefs
+.vagrant
+target
